--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <h1>기술 메뉴얼</h1>
   <h2>(Made by 범서) Ver. 1.12</h2>
 
-  <a href="ai.html" class="menu-button">
+  <a href="Ai.html" class="menu-button">
     챗봇 메뉴얼
     <span class="desc">챗봇 작동 방식과 매뉴얼</span>
   </a>
@@ -63,10 +63,11 @@
     <span class="desc">Windows, Linux 등 설명</span>
   </a>
 
-  <a href="lang.html" class="menu-button">
+  <a href="Lang.html" class="menu-button">
     코딩언어 메뉴얼
     <span class="desc">Python, C++, JS 등 정리</span>
   </a>
 
 </body>
+
 </html>
