--- a/Ai.html
+++ b/Ai.html
@@ -241,7 +241,7 @@
         .huggingface { --accent-color: #8496aa; }
         .jasper { --accent-color: #c2cc31; }
         .grok { --accent-color: #503a22; }
-        .blackberry { --accent-color: #31221c; }
+        .deepseek { --accent-color: #31221c; }
 
 
 
@@ -491,7 +491,21 @@
     popularity: 45,
     code: `사용자: 오늘 테슬라 주식 어때?\nGrok: 오늘 테슬라(TSLA)는 전일 대비 2.3% 상승했습니다. (출처: X 실시간 뉴스)`,
     details: "Grok은 Elon Musk의 AI 스타트업 xAI가 개발한 언어모델 기반 AI로, X(구 Twitter)와 직접 통합되어 실시간 트렌드, 뉴스, 주식 등과 관련된 정보를 빠르게 제공합니다. 경쟁 서비스보다 직설적이고 유머러스한 응답을 특징으로 하며, 대중성과 기술 실험성을 동시에 추구하는 것이 특징입니다.\n\n현재 X Premium 사용자에게 우선 제공되며, SNS와의 밀접한 통합 덕분에 뉴스/트렌드 탐색 도구로 주목받고 있습니다."
+},
+{
+    name: "DeepSeek",
+    class: "deepseek",
+    icon: "🛰️",
+    description: "중국에서 개발된 초대형 언어모델 기반 AI. 고성능 추론과 저비용 API 제공으로 주목받고 있습니다.",
+    category: ["무료api", "무료", "코딩"],
+    year: 2024,
+    difficulty: 3,
+    popularity: 40,
+    code: `사용자: 퀵소트 알고리즘을 Python으로 작성해줘\nDeepSeek:\n\ndef quicksort(arr):\n    if len(arr) <= 1:\n        return arr\n    pivot = arr[len(arr) // 2]\n    left = [x for x in arr if x < pivot]\n    middle = [x for x in arr if x == pivot]\n    right = [x for x in arr if x > pivot]\n    return quicksort(left) + middle + quicksort(right)\n\nprint(quicksort([3,6,8,10,1,2,1]))`,
+    details: "DeepSeek은 중국의 AI 스타트업이 개발한 초대규모 언어모델로, 강력한 추론 능력과 빠른 응답 속도를 갖추고 있습니다. 특히 비용 효율성이 높아 대규모 배포 및 연구 환경에서 인기가 높습니다.\n\n**주요 특징:**\n• 고급 코드 생성 및 디버깅 지원\n• 멀티언어 대응 (중국어, 영어, 한국어 등)\n• 대화형 질의응답 및 문서 요약 기능\n• 경량 API로 저비용 제공\n• 오픈 모델 일부 공개\n\n**활용 분야:**\n• 소프트웨어 개발\n• 데이터 분석\n• 학술 연구\n• 기업 지식베이스 구축"
 }
+
+
 
 ]
 
